Fix alignment issue on Hero and header part and card-texts parts

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ img {
     margin-bottom: 8px;
 }
 
+
 a {
     text-decoration: none;
     color: #f9faf8;
@@ -37,21 +38,35 @@ button {
     
 }
 
+.header-img {
+    width: 400px;
+    height:auto;
+    border: none;
+    border-radius: 0px;
+}
+
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    padding: 8px 38px;
+    padding: 15px 0px;
+    flex-grow: 1; */
+    /* height: 250px; */
 }
 
 .header-left {
     font-size: 24px;
+    width: 469px;
+    /* display: flex;
+    justify-content: flex-start; */
 }
 
 .header-right {
     font-size: 18px;
     display: flex;
     gap: 25px;
+    width: 400px;
+    justify-content: flex-end;
 }
 
 .subheader {
@@ -72,7 +87,7 @@ button {
 
 .subheader-right {
     width: 400px;
-    background-color: gray;
+    /* background-color: gray; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -99,9 +114,19 @@ button {
     padding: 80px 40px;
 }
 
+.cont-top{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    flex-shrink: 1;
+    align-items: center;
+    padding-bottom: 10px;
+}
+
 .cont-bottom {
     display: flex;
     justify-content: space-evenly;
+    align-items: flex-start;
     padding: 10px 80px;
     gap: 40px;
     /* align-items: center; */
@@ -112,7 +137,7 @@ button {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-center;
     text-align: center;
 }
 
